tests/files/type_checker_tests/should_fail/107.cmdr
//Should fail pre-decrement on something not a lvalue
--1;
